✨ Add portfolio items to index template

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -14,7 +14,7 @@ $black: #2b2523
 $pink: #E86A92 
 $yellow: #ffdb97 
 
-.content 
+.content,
   a
     border-bottom: solid 4px $pink 
     padding-bottom: 2px 
@@ -159,6 +159,14 @@ $menu-label-color: $white-ter
       color: white 
     a:hover
       color: $pink
+
+.portfolio-item
+  h1
+    font-size: 3em
+  a
+    color: $black
+  a:hover
+    color: $pink
 
 @import "~bulma"
 
