🔧 Fix header link css

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -39,6 +39,9 @@ h1, h2, h3, h4, h5, h6
 
 .navbar .navbar-menu
   box-shadow:none !important
+  a:hover, a:active
+    border-bottom: solid 2px $pink 
+    color: $pink
 
 .content .taglist
   list-style: none
