✨ Brute force content links grey -> pink

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -43,6 +43,13 @@ h1, h2, h3, h4, h5, h6
     border-bottom: solid 2px $pink 
     color: $pink
 
+.content
+  p
+    a
+      color: $black !important
+    a:hover
+      color: $pink !important
+
 .content .taglist
   list-style: none
   margin-bottom: 0
