♻️ Quick tidy-up of blog template

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -182,6 +182,11 @@ $menu-label-color: $white-ter
   a:hover
     color: $pink
 
+.blog-summary
+  p
+    a
+      border: 0;
+
 @import "~bulma"
 
 // responsiveness
