✨ Add correct image centring approach

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -45,14 +45,16 @@ h1, h2, h3, h4, h5, h6
 
 .content
   p
-    display: flex
-    img
-      margin-left: auto;
-      margin-right: auto;
     a
       color: $black !important
     a:hover
       color: $pink !important
+
+p.center-image
+  display: flex
+  img
+    margin-left: auto;
+    margin-right: auto;
 
 .content .taglist
   list-style: none
