--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -168,8 +168,8 @@ $menu-label-color: $white-ter
 .contact
   p
     color: white
+    display: block
     margin-bottom: 0.5em;
-    text-align: right
     
     a
       color: white !important
