--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,46 +1,47 @@
 @import "~bulma/sass/utilities/initial-variables"
-@import url('https://fonts.googleapis.com/css?family=Lora&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Cabin:500,500i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lora&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Cabin:500,500i&display=swap')
 
 // Config vars
 // Kaldi logo brand color: #FD461E
 $kaldi-red: #D64000 
 $kaldi-red-invert: #fff
- 
-$primary: $kaldi-red 
-$primary-invert: $kaldi-red-invert 
+
 $body-color: #333 
 $black: #2b2523 
 $pink: #E86A92 
+$primary: $kaldi-red 
+$primary-invert: $kaldi-red-invert 
 $yellow: #ffdb97 
 
-.content,
+.content
   a
-    border-bottom: solid 4px $pink 
-    padding-bottom: 2px 
-    margin-bottom: 4px 
-    a:hover 
-      border-bottom: solid 2px $pink 
-      padding-bottom: 4px 
+    border-bottom: solid 4px $pink
+    padding-bottom: 2px
+    margin-bottom: 4px
 
-a:hover 
-  color: $pink 
-  
-body 
+    :hover
+      border-bottom: solid 2px $pink
+      padding-bottom: 4px
+
+a:hover
+  color: $pink
+
+body
   font-family: 'Cabin', sans-serif
 
-h1, h2, h3, h4, h5, h6 
+h1, h2, h3, h4, h5, h6
   font-family: 'Lora', serif
-  font-weight: normal 
+  font-weight: normal
 
 .header
   h1
     color: $yellow !important
 
 .navbar .navbar-menu
-  box-shadow:none !important
+  box-shadow: none !important
   a:hover, a:active
-    border-bottom: solid 2px $pink 
+    border-bottom: solid 2px $pink
     color: $pink
 
 .content
@@ -53,8 +54,8 @@ h1, h2, h3, h4, h5, h6
 p.center-image
   display: flex
   img
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto
+    margin-right: auto
 
 .content .taglist
   list-style: none
@@ -86,30 +87,30 @@ p.center-image
   align-items: center
 
 .full-width-image
-    width: 100vw
-    height: 400px
-    background-size: cover
-    background-position: bottom
-    display: flex
-    justify-content: center
-    align-items: center
+  width: 100vw
+  height: 400px
+  background-size: cover
+  background-position: bottom
+  display: flex
+  justify-content: center
+  align-items: center
 
 .btn
-    display: inline-block
-    padding: 12px 16px 10px
-    font-size: 18px
-    font-size: 1rem
-    line-height: 1.25
-    background-color: #fff
-    border-radius: .25rem
-    text-decoration: none
-    font-weight: 700
-    color: #CC3700
-    text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
-    -webkit-transition: all .15s ease
-    transition: all .15s ease
+  display: inline-block
+  padding: 12px 16px 10px
+  font-size: 18px
+  font-size: 1rem
+  line-height: 1.25
+  background-color: #fff
+  border-radius: .25rem
+  text-decoration: none
+  font-weight: 700
+  color: #CC3700
+  text-align: center
+  -webkit-box-shadow: inset 0 0 0 2px #CC3700
+  box-shadow: inset 0 0 0 2px #f40
+  -webkit-transition: all .15s ease
+  transition: all .15s ease
 
 .margin-top-0
   margin-top: 0 !important
@@ -136,7 +137,6 @@ $menu-item-active-background-color:	$kaldi-red-invert
 $menu-list-border-left: 1px solid $kaldi-red-invert
 $menu-label-color: $white-ter
 
-
 .menu-label
   font-size: 1em !important
   text-align: left
@@ -146,31 +146,31 @@ $menu-label-color: $white-ter
 .social
   padding: 2em
 .social a
-    padding: .5em .5em .3em .5em
-    border-radius: 1em
-    background-color: $white-ter
-    margin: .5em
-    width: 1em
-    height: 1em
-    vertical-align: middle
-    display: inline
+  padding: .5em .5em .3em .5em
+  border-radius: 1em
+  background-color: $white-ter
+  margin: .5em
+  width: 1em
+  height: 1em
+  vertical-align: middle
+  display: inline
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #d6400033
 .blog-list-item header
-  display: flex;
-  margin-bottom: 1em;
+  display: flex
+  margin-bottom: 1em
 .blog-list-item .featured-thumbnail
-  flex-basis: 35%;
-  margin: 0 1.5em 0 0;
+  flex-basis: 35%
+  margin: 0 1.5em 0 0
 
 .contact
   p
     color: white
     display: block
-    margin-bottom: 0.5em;
-    
+    margin-bottom: 0.5em
+
     a
       color: white !important
     a:hover
@@ -187,19 +187,19 @@ $menu-label-color: $white-ter
 .blog-summary
   p
     a
-      border: 0;
+      border: 0
 
 @import "~bulma"
 
 // responsiveness
 +tablet-only
   .blog-list-item .featured-thumbnail
-    flex-basis: 50%;
+    flex-basis: 50%
 
 +mobile
   .blog-list-item header
     display: block
   .blog-list-item .featured-thumbnail
-    text-align: center;
-    max-width: 70%;
-    margin: 0 0 1em;
+    text-align: center
+    max-width: 70%
+    margin: 0 0 1em
