🚚 Move header styling to sass file

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -9,6 +9,7 @@ $kaldi-red-invert: #fff
 
 $body-color: #333 
 $black: #2b2523 
+$feature-color: #194239
 $pink: #E86A92 
 $primary: $kaldi-red 
 $primary-invert: $kaldi-red-invert 
@@ -164,6 +165,9 @@ $menu-label-color: $white-ter
 .blog-list-item .featured-thumbnail
   flex-basis: 35%
   margin: 0 1.5em 0 0
+
+.coloured-header
+  background-color: $feature-color
 
 .contact
   p
